--- a/manuscript.html
+++ b/manuscript.html
@@ -46,9 +46,9 @@
   <meta name="citation_fulltext_html_url" content="https://banyekalaok.github.io/cee498report/" />
   <meta name="citation_pdf_url" content="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/37e124f984d84de354fd3c6bacd64979b15c9cd5/" />
-  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/37e124f984d84de354fd3c6bacd64979b15c9cd5/" />
-  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/37e124f984d84de354fd3c6bacd64979b15c9cd5/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/ca9613909414ffdaf12d9f7fa05074f0b1ca227f/" />
+  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/ca9613909414ffdaf12d9f7fa05074f0b1ca227f/" />
+  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/ca9613909414ffdaf12d9f7fa05074f0b1ca227f/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -62,9 +62,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://banyekalaok.github.io/cee498report/v/37e124f984d84de354fd3c6bacd64979b15c9cd5/">permalink</a>)
+(<a href="https://banyekalaok.github.io/cee498report/v/ca9613909414ffdaf12d9f7fa05074f0b1ca227f/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/banyekalaok/cee498report/tree/37e124f984d84de354fd3c6bacd64979b15c9cd5">banyekalaok/cee498report@37e124f</a>
+from <a href="https://github.com/banyekalaok/cee498report/tree/ca9613909414ffdaf12d9f7fa05074f0b1ca227f">banyekalaok/cee498report@ca96139</a>
 on December 6, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -365,7 +365,11 @@ The following section summarizes the EDA results that are relevant to the model 
 <figure>
 <img src="images/eda7.png" alt="" /><figcaption>correlation heat map</figcaption>
 </figure>
-<p>Also, for CUMTD, different bus lines serve specific groups of people. In this way, it is important to find the characteristic of each bus line during August. First, we create different Dataframe for different bus line. Since the bus name is not easy to show in graphs, we use <a href="http://mtd.org/maps-and-schedules/routes/">Number of Routes’ Names in CUMTD</a> to instead. For some bus line which has different types of bus number based on different routes or different service timeline (for example, 1 Yellow serves during weekdays’ morning and afternoon, and 100 Yellow serves during weekdays’ evening and the whole weekends; 5 Green have normal line and express line or hopper line which similar but different routes), we separate all of them into different name and expressions. After that, we pick up their statistic of “Load Average” in average, and combine with comparison, showing as below.</p>
+<p>Next, we try to find the charateristic of load average in different workdays. By seperating load average into different workdays from Monday to Friday, we plot the sum of the load average and their durations showing as below.</p>
+<p><img src="images/Load_Avg_weekdays.png" alt="Load Avg in weekdays" />
+<img src="images/Load_Avg_duration.png" alt="Duration of Load Avg" /></p>
+<p>From the figures, we find that the number of trips are fairly evenly distributed throughout the week, and the start and end of the work week have outliers.</p>
+<p>Also, for CUMTD, different bus lines serve specific groups of people. In this way, it is important to find the characteristic of each bus line during August. First, we create different Dataframe for different bus line. Since the bus name is not easy to show in graphs, we use <a href="http://mtd.org/maps-and-schedules/routes/">Number of Routes’ Names in CUMTD</a> to instead. For some bus line which has different types of bus number based on different routes or different service timeline (for example, 1 Yellow serves during weekdays’ morning and afternoon, and 100 Yellow serves during weekdays’ evening and the whole weekends; 5 Green have normal line and express line or hopper line which similar but different routes), we separate all of them into different name and expressions. After that, we pick up their statistic of “Load Average” in average, and combine with comparison, showing as below. (Note: In the left figure, “Ex” stands for express buses, “H” stands for Hopper, “L” stands for late night buses, “M” stands for maintenance buses and “T” stands for training buses)</p>
 <div id="fig:square-image" class="fignos">
 <figure>
 <img src="images/load_avg_in_all_days(average).png" alt="" /><figcaption><span>Figure 2:</span> Load Avg for all buses in average</figcaption>
